--- a/res/values/themes.xml
+++ b/res/values/themes.xml
@@ -1,5 +1,5 @@
 <resources xmlns:android="http://schemas.android.com/apk/res/android">
-	<style name="AppTheme" parent="android:Theme.NoTitleBar">
+	<style name="AppTheme" parent="android:Theme.NoTitleBar.Fullscreen">
 	     <item name="android:windowNoTitle">true</item>
     </style>
 </resources>
