--- a/res/layout/fragment_playvideo.xml
+++ b/res/layout/fragment_playvideo.xml
@@ -18,15 +18,41 @@
     </io.vov.vitamio.widget.CenterLayout>
 
     <RelativeLayout
-        android:id="@+id/play_layout_cache"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone" >
+         >
+	<LinearLayout
+            android:id="@+id/play_layout_cache"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:visibility="gone"
+            android:orientation="horizontal" >
 
+            <ProgressBar
+                android:id="@+id/play_progress"
+                style="?android:attr/progressBarStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+			<TextView
+                android:id="@+id/play_buffer_percent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:text="0%" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="4dp"
+                android:text="caching" />
+        </LinearLayout>
         <LinearLayout
+            android:id="@+id/play_layout_cache"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true" 
+            android:visibility="gone"
             android:orientation="horizontal" >
 
             <ProgressBar
