--- a/res/layout/list_view_item_videotv.xml
+++ b/res/layout/list_view_item_videotv.xml
@@ -7,8 +7,8 @@
 
     <ImageView
         android:id="@+id/video_tv_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="28dp"
+        android:layout_height="28dp"
         android:layout_margin="10dp"
         android:src="@drawable/ic_launcher" />
 
