--- a/res/layout/fragment_program.xml
+++ b/res/layout/fragment_program.xml
@@ -8,13 +8,50 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical" >
+		<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal" >
 
+        <ImageView
+            android:id="@+id/station_logo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+             android:contentDescription="@string/app_name"
+            android:layout_margin="10dp"
+            android:src="@drawable/ic_launcher" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+             android:layout_weight="1"
+            android:orientation="vertical" >
+
+            <TextView
+                android:id="@+id/station_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
+            <TextView
+                android:id="@+id/station_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
+        <ImageView
+            android:id="@+id/station_favorite"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:contentDescription="@string/app_name"
+            android:src="@drawable/ic_star_selected" />
+        </LinearLayout>
         <mobi.cangol.mobile.onetv.view.ListViewTips
             android:id="@+id/listViewTips"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
         </mobi.cangol.mobile.onetv.view.ListViewTips>
-
+		
         <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
