--- a/res/layout/list_view_item_history.xml
+++ b/res/layout/list_view_item_history.xml
@@ -3,18 +3,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:descendantFocusability="blocksDescendants"
-    android:padding="4dp"
+    android:padding="8dp"
     android:gravity="center_vertical"
     android:orientation="horizontal" >
-
-    <ImageView
-        android:id="@+id/video_tv_icon"
-        android:layout_width="28dp"
-        android:layout_height="28dp"
-        android:layout_margin="10dp"
-        android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_launcher" />
-
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -23,22 +14,22 @@
         android:orientation="vertical" >
 
         <TextView
-            android:id="@+id/video_tv_name"
+            android:id="@+id/item_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/video_tv_desc"
+            android:id="@+id/item_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/video_tv_star"
+        android:id="@+id/item_action"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
          android:contentDescription="@string/app_name"
         android:padding="8dp"
-        android:src="@drawable/ic_action_play" />
+        android:src="@drawable/ic_action_more" />
 
 </LinearLayout>
