--- a/res/layout/fragment_list.xml
+++ b/res/layout/fragment_list.xml
@@ -4,22 +4,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
-
-        <mobi.cangol.mobile.onetv.view.ListViewTips
-            android:id="@+id/listViewTips"
+        <mobi.cangol.mobile.onetv.view.PromptView
+            android:id="@+id/promptView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
-        </mobi.cangol.mobile.onetv.view.ListViewTips>
+        </mobi.cangol.mobile.onetv.view.PromptView>
 
         <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="match_parent" >
         </ListView>
-    </LinearLayout>
-
 </LinearLayout>
