--- a/res/layout/fragment_program.xml
+++ b/res/layout/fragment_program.xml
@@ -3,11 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical" >
 		<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -46,17 +41,15 @@
             android:contentDescription="@string/app_name"
             android:src="@drawable/ic_star_selected" />
         </LinearLayout>
-        <mobi.cangol.mobile.onetv.view.ListViewTips
-            android:id="@+id/listViewTips"
+        <mobi.cangol.mobile.onetv.view.PromptView
+            android:id="@+id/promptView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
-        </mobi.cangol.mobile.onetv.view.ListViewTips>
+        </mobi.cangol.mobile.onetv.view.PromptView>
 		
         <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" >
         </ListView>
-    </LinearLayout>
-
 </LinearLayout>
