add delete action

--- a/res/layout/list_view_item_station.xml
+++ b/res/layout/list_view_item_station.xml
@@ -39,6 +39,6 @@
         android:layout_height="wrap_content"
          android:contentDescription="@string/app_name"
         android:padding="8dp"
-        android:src="@drawable/ic_action_play" />
+        android:src="@drawable/ic_action_play_btn" />
 
 </LinearLayout>
