--- a/res/layout/list_view_item_history.xml
+++ b/res/layout/list_view_item_history.xml
@@ -15,11 +15,15 @@
 
         <TextView
             android:id="@+id/item_name"
+            android:textSize="16sp"
+            android:textColor="#333333"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/item_time"
+            android:textSize="12sp"
+            android:textColor="#b5b5b5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
     </LinearLayout>
@@ -29,7 +33,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
          android:contentDescription="@string/app_name"
-        android:padding="8dp"
-        android:src="@drawable/ic_action_more" />
+        android:padding="4dp"
+        android:src="@drawable/ic_action_more_btn" />
 
 </LinearLayout>
