--- a/res/layout/list_view_item_remind.xml
+++ b/res/layout/list_view_item_remind.xml
@@ -13,20 +13,31 @@
         android:layout_weight="1"
         android:orientation="vertical" >
 
-        <TextView
+          <TextView
             android:id="@+id/item_name"
+            android:textSize="14sp"
+            android:textColor="#333333"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
-
+		 <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
         <TextView
             android:id="@+id/item_time"
-            android:layout_width="match_parent"
+            android:textSize="16sp"
+            android:textColor="#333333"
+             android:textStyle="bold"
+            android:layout_width="60dp"
             android:layout_height="wrap_content"/>
-        
-        <TextView
+         <TextView
             android:id="@+id/item_desc"
+            android:textSize="16sp"
+            android:textColor="#333333"
+             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+         </LinearLayout>
     </LinearLayout>
 
     <ImageView
