--- a/res/values/colors_onetv.xml
+++ b/res/values/colors_onetv.xml
@@ -19,4 +19,8 @@
 
 <resources>
     <color name="pressed_onetv">#CC33B5E5</color>
+    
+     <color name="white">#ffffffff</color>
+     <color name="drivier">#C5C7CA</color>
+     <color name="black">#000000</color>
 </resources>
