--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -16,4 +16,34 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textStyle">bold</item>
     </style>
+    
+    <style name="CommonText" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">16.0dip</item>
+        <item name="android:textColor">@color/common_text</item> 
+         <item name="android:duplicateParentState">true</item> 
+    </style>
+    
+   <style name="BlackText" parent="@android:style/TextAppearance.Medium">
+        <item name="android:textSize">16.0dip</item>
+        <item name="android:textColor">#000000</item> 
+        <item name="android:padding">2.0dip</item>
+    </style> 
+    
+   <style name="btn_grey" parent="@android:style/Widget.Button">
+        <item name="android:textSize">16.0dip</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/btn_grey_text</item>
+        <item name="android:background">@drawable/btn_grey</item>
+        <item name="android:padding">5dip</item>
+        <item name="android:layout_margin">5.0dip</item>
+    </style>
+    <style name="dialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:gravity">center</item>
+        <item name="android:backgroundDimEnabled">false</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+    </style>
 </resources>
