--- a/res/layout/common_view_loading.xml
+++ b/res/layout/common_view_loading.xml
@@ -12,6 +12,7 @@
 
     <TextView
         android:id="@+id/common_loading_text"
+        android:layout_marginLeft="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/common_loading" />
