--- a/res/layout/fragment_playvideo.xml
+++ b/res/layout/fragment_playvideo.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:layout_height="match_parent" >
 
     <io.vov.vitamio.widget.CenterLayout
         android:layout_width="match_parent"
@@ -17,35 +16,10 @@
             android:layout_centerVertical="true" />
     </io.vov.vitamio.widget.CenterLayout>
 
-    <RelativeLayout
+    <mobi.cangol.mobile.onetv.view.VideoPromptView
+        android:id="@+id/videoPromptView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-         >
-	<LinearLayout
-            android:id="@+id/play_layout_cache"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:orientation="horizontal" >
-
-            <ProgressBar
-                android:id="@+id/play_progress"
-                style="?android:attr/progressBarStyleSmall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                />
-			<TextView
-                android:id="@+id/play_buffer_percent"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
-                android:text="0%" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="4dp"
-                android:text="caching" />
-        </LinearLayout>
-    </RelativeLayout>
-
-</LinearLayout>
+        android:layout_height="match_parent" >
+    </mobi.cangol.mobile.onetv.view.VideoPromptView>
+	
+</FrameLayout>
