--- a/res/layout/fragment_program.xml
+++ b/res/layout/fragment_program.xml
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
              android:contentDescription="@string/app_name"
             android:layout_margin="10dp"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/ic_action_station" />
 
         <LinearLayout
             android:layout_width="0dp"
@@ -25,6 +25,8 @@
 
             <TextView
                 android:id="@+id/station_name"
+                 android:textSize="16sp"
+       		 	android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
