--- a/res/layout/list_view_item_station.xml
+++ b/res/layout/list_view_item_station.xml
@@ -13,7 +13,7 @@
         android:layout_height="28dp"
         android:layout_margin="10dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/ic_launcher" />
+        android:src="@drawable/ic_action_station" />
 
     <LinearLayout
         android:layout_width="0dp"
@@ -24,6 +24,8 @@
 
         <TextView
             android:id="@+id/video_tv_name"
+            android:textSize="16sp"
+       		 android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
