--- a/res/layout/common_view_footer.xml
+++ b/res/layout/common_view_footer.xml
@@ -16,6 +16,9 @@
         android:id="@+id/list_footer_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:paddingLeft="4dp"
+         android:textSize="14sp"
+        android:textColor="#333333"
         android:text="@string/common_loading_more" />
 	
 </LinearLayout>
