--- a/res/layout/common_view_loading.xml
+++ b/res/layout/common_view_loading.xml
@@ -13,6 +13,8 @@
     <TextView
         android:id="@+id/common_loading_text"
         android:layout_marginLeft="8dp"
+         android:textSize="14sp"
+        android:textColor="#333333"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/common_loading" />
