--- a/res/layout/common_view_tips.xml
+++ b/res/layout/common_view_tips.xml
@@ -10,6 +10,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:drawableTop="@drawable/ic_action_error"
+        android:textSize="14sp"
+        android:textColor="#333333"
         android:drawablePadding="4dip"
         android:gravity="center" />
 	
