--- a/res/layout/fragment_program.xml
+++ b/res/layout/fragment_program.xml
@@ -14,13 +14,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
              android:contentDescription="@string/app_name"
-            android:layout_margin="10dp"
+            android:padding="8dp"
             android:src="@drawable/ic_action_station" />
 
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
              android:layout_weight="1"
+             android:gravity="center_vertical"
             android:orientation="vertical" >
 
             <TextView
