--- a/res/layout/fragment_program.xml
+++ b/res/layout/fragment_program.xml
@@ -15,27 +15,15 @@
             android:layout_height="wrap_content"
              android:contentDescription="@string/app_name"
             android:padding="8dp"
-            android:src="@drawable/ic_action_station" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-             android:layout_weight="1"
-             android:gravity="center_vertical"
-            android:orientation="vertical" >
-
-            <TextView
+            android:src="@drawable/ic_action_play" />
+		<TextView
                 android:id="@+id/station_name"
                  android:textSize="16sp"
        		 	android:textStyle="bold"
-                android:layout_width="wrap_content"
+       		 	android:padding="8dp"
+       		 	android:layout_weight="1"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"/>
-
-            <TextView
-                android:id="@+id/station_desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-        </LinearLayout>
         <ImageView
             android:id="@+id/station_favorite"
             android:layout_width="wrap_content"
@@ -62,6 +50,6 @@
         <ListView
             android:id="@+id/listview"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-        </ListView>
+              android:layout_height="0dp"
+            android:layout_weight="1"/>
 </LinearLayout>
