--- a/res/layout/fragment_aboutus.xml
+++ b/res/layout/fragment_aboutus.xml
@@ -8,7 +8,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="25dp"
+        android:layout_margin="40dp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/ic_launcher" />
 
@@ -35,5 +35,13 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:textColor="#333333" />
-
+	<TextView
+        android:id="@+id/copyright_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/copyright"
+        android:gravity="left|top"
+        android:layout_margin="20dp"
+        android:textSize="14sp"
+        android:textColor="#333333" />
 </LinearLayout>
